# swh-subgrapher

./: CONTRIBUTORS  Cargo.toml
rust/: Cargo.toml
rust/src/: swhid.rs
rust/src/compress/: iter_arcs.rs  iter_labeled_arcs.rs
swhids-subgrapher/: Cargo.toml  README.md
swhids-subgrapher/src/: main.rs
tools/swhids-subgrapher/: Cargo.toml  README.md
tools/swhids-subgrapher/src/: main.rs
